--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>LeadFlow CRM</title>
+    <title>Atlas - By Houzlook</title>
     <meta name="description" content="Lead Management CRM Application" />
-    <meta name="author" content="LeadFlow" />
+    <meta name="author" content="Atlas - By Houzlook" />
 
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#6366f1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="LeadFlow" />
-    <link rel="apple-touch-icon" href="/pwa-192x192.png" />
+    <meta name="apple-mobile-web-app-title" content="Atlas" />
+    <link rel="apple-touch-icon" href="/logo.svg" />
     <link rel="manifest" href="/manifest.json" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="LeadFlow CRM" />
+    <meta property="og:title" content="Atlas - By Houzlook" />
     <meta property="og:description" content="Lead Management CRM Application" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@LeadFlow" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
