--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@LeadFlow" />
+    <meta name="twitter:site" content="@Atlas" />
     <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
-  <body>
+  <body>ds
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
